feat: Improve exception handling logic and enhance API response stability
## feat: Improve exception handling logic and enhance API response stability

- **Added safeguard code to prevent potential `NullPointerException` during Region API response parsing**
  - Implemented handling for cases where `RegionResult.getJuso()` is `null` or empty

- **Extended `ExternalApiException` constructor and standardized usage**
  - Added constructor accepting a `cause` to preserve detailed error information

- **Separated `CustomException` class file and updated `GlobalExceptionHandler`**
  - Created `CustomException.java` for clearer class structure
  - Modified `GlobalExceptionHandler` to use `CustomException`'s `getStatus()` and `getMessage()` methods

- **Resolved related compile-time and runtime exceptions**